# forge

./: .envrc  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODOS.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: allowed_domains.py  allowed_orgs.py  analytics.py  auth.py  config.py  deps.py  lambda_ws.py  llm.py  main.py  model_config.py  models.py  orgchart.py  storage.py  voice.py
backend/agent/: context.py  events.py  executor.py  extraction.py  loop.py  (+3 more)
config/: admin-access.json  allowed-domains.json  allowed-orgs-staging.json  allowed-orgs.json  company-software.json  company.json  pulse-surveys.json
department-resources/: chief-of-staff.md  customer-solutions.md  customer-success.md  finance.md  global.md  legal.md  marketing.md  operations.md  people.md  product.md  sales.md  technology.md
docs/: 2026-03-12-ai-tuesdays-brainstorm-summary.md  2026-03-12-ai-tuesdays-design.md  deployment-setup.md  lambda-alias-versioning.md  project-status.md  v2-implementation-log.md  voice-input-plan.md  weekly-analytics-runbook.md
frontend/: index.html  package-lock.json  package.json
scripts/: backfill-pulse-v2-suppression.py  backfill_enrichment_marker.py  config-history.py  copy-user-for-masquerade.sh  copy-user-to-staging.py  dev.sh  e2e_test.py  generate-activity-reports.py  generate-digest.py  index_curriculum.py  index_department_resources.py  migrate-objectives-to-company.py  migrate_day_one_title.py  start-local.sh  upload-digests-s3.sh
skills/: brainstorm.md  chat.md  collab.md  end_of_day.md  intake.md  journaling.md  onboarding.md  stuck.md  tip.md  tuesday_checkin.md  wrapup.md
tests/: conftest.py  test_active_preview.py  test_activity_reports.py  test_agent.py  test_allowed_domains.py  test_allowed_orgs.py  test_api.py  test_auth.py  test_chunking.py  test_e2e_pulse_intake.py  test_enrichment_gate.py  test_intake.py  test_lambda_ws.py  test_llm.py  test_profile_schema.py  test_prompts.py  test_recurring_clearing.py  test_repositories.py  test_schemas.py  test_storage.py  test_tools.py  test_voice.py  test_websocket.py  test_wrapup_context.py
(+172 files in other folders)
