[project]
name = "forge"
version = "0.1.0"
description = "AI Tuesdays - Digital Science internal chat and RAG application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm @ https://github.com/BerriAI/litellm/archive/refs/tags/v1.82.3.tar.gz",
    "lancedb>=0.17",
    "boto3>=1.36",
    "pyjwt[crypto]==2.12.0",
    "cryptography==46.0.5",
    "python-multipart>=0.0.20",
    "google-genai>=1",
    "httpx==0.28.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "awslambdaric>=3",
    "posthog>=3",
    "awscrt>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx==0.28.1",
    "ruff>=0.9",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
